--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello</h1>
+    
     <h2>Omar Faruk</h2>
+    <img src="images/img1.jpeg" alt="">
 </body>
 </html>
