--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <h2>Omar Faruk</h2>
+    <h2>This is my first website push github</h2>
     <img src="images/img1.jpeg" alt="">
 </body>
 </html>
