--- a/index.html
+++ b/index.html
@@ -8,8 +8,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    <h2>This is my first website push github</h2>
-    <img src="images/img1.jpeg" alt="">
+    <header>
+        <div class="container">
+            <div class="logo">LOGO</div>
+            <div class="nav-menu">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            <div class="btn-button">
+                <button type="submit" class="btn">Click Here</button>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
